<resources>
    <string name="app_name">CVKotlin</string>
    <string name="global_accept">Accepter</string>
    <string name="global_shutdown">Fermer l\'application</string>
    <string name="global_continue">Continuer quand même</string>
    <string name="warning_no_connection_title">Aucune connexion</string>
    <string name="warning_no_data_connection_desc">Attention, vous n\'êtes pas connecté à internet et aucune données n\'a été enregistrées.\n\nVeuillez vous connecter à internet et redémarrer l\'application</string>
    <string name="warning_no_connection_new_version_desc">Attention, vous n\'êtes pas connecté à internet.\n\nLes données affichées ne sont peut-être pas à jour</string>
    <string name="title_profile">Profil</string>
    <string name="title_notifications">Contact</string>
    <string name="title_experiences">Experiences</string>
    <string name="me_profile">Profil :</string>
    <string name="me_skills">Compétences :</string>
    <string name="me_hobbies">Centres d\'intérêt :</string>
    <string name="xp_details_context">Contexte :</string>
    <string name="xp_details_mission">Missions :</string>
    <string name="xp_details_skills">Compétences :</string>
    <string name="title_contact">Contact</string>
    <string name="title_formation">Formation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_view_experiences">Mes expériences professionnelles</string>
    <string name="title_view_formation">Mon parcours</string>
    <string name="title_view_contact">Pour me contacter</string>
    <string name="contact_download">Télécharger mon CV</string>
    <string name="toolbar_search">Rechercher une compétence</string>
    <string name="app_settings_mode_dark">Mode sombre</string>
</resources>
